# distro-bench

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile.alpine  Dockerfile.fedora  Dockerfile.trixie  Makefile  README.md  docker-compose.yml  payload.json
results/: bench-[alpine-linux-v322].json  bench-[debian-gnulinux-13-trixie].json  bench-[fedora-linux-43-container-image].json
scripts/: run.sh
src/client/: benchmark.rs  config.rs  helpers.rs  main.rs  models.rs  stats.rs
src/server/: config.rs  main.rs
