[package]
name = "benchmark"
version = "1.0.0"
edition = "2024"

[dependencies]
once_cell = "1"
axum = "0.7"
tokio = {
    version = "1.37",
    features = ["full"]
}
reqwest = {
    version = "0.12",
    default-features = false,
    features = ["rustls-tls"]
}
serde = {
    version = "1.0",
    features = ["derive"]
}
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
